<resources>
    <string name="app_name">ProyectoRedesAPP</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="repetir_contrase_a">Repetir contraseña</string>
    <string name="nombreCompleto">Nombre completo</string>
    <string name="registrar">Registrar</string>
</resources>