<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".Actividades.Registro"
    android:gravity="center"
    android:padding="10sp">

    <EditText
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombreCompleto"
        android:inputType="textEmailAddress"
        android:autofillHints="" />
    <EditText
        android:id="@+id/correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/contrase_a"
        android:autofillHints="" />
    <EditText
        android:id="@+id/rContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/repetir_contrase_a"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/registrar" />
</LinearLayout>